<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LifeHelper</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">search</string>
    <string name="action_compose">compose</string>
    <string name="action_share">share</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_add">添加</string>
    <string name="number_1">个人消费</string>
    <string name="number_2">多人消费</string>
    <string name="title">消费标题</string>
    <string name="money">消费金额</string>
    <string name="date">消费日期</string>
    <string name="special">特殊消费</string>
    <string name="account">是否结算</string>
    <string name="coin_number_1">个人注资</string>
    <string name="coin_number_2">多人注资</string>
    <string name="coin_title">注资标题</string>
    <string name="coin_money">注资金额</string>
    <string name="coin_date">注资日期</string>
    <string name="coin_special"/>
    <string name="search_number_1">个人</string>
    <string name="search_number_2">多人</string>
    <string name="search_title">标题</string>
    <string name="search_money">金额</string>
    <string name="search_date">日期</string>
    <string name="search_special"></string>
    <string name="search_default">全部</string>
   
</resources>
