<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RadioGroup android:id="@+id/cart_add_group" android:layout_width="fill_parent" android:paddingTop="5dp" android:paddingBottom="5dp" android:layout_height="wrap_content" android:orientation="horizontal">
        <RadioButton android:id="@+id/cart_add_group_lone" android:layout_marginLeft="10dp" android:textSize="@dimen/bigger"  android:layout_marginRight="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/number_1" android:layout_weight="1"/>
        <View android:layout_width="0.5dp" android:layout_height="fill_parent" android:background="@color/driver"/>
        <RadioButton android:id="@+id/cart_add_group_more" android:layout_marginLeft="10dp" android:textSize="@dimen/bigger" android:layout_marginRight="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/number_2" android:layout_weight="1"/>
    </RadioGroup>
    <View android:layout_width="fill_parent" android:layout_height="1dp" android:background="@drawable/driver"/>
    <LinearLayout android:layout_marginTop="10dp" android:layout_marginBottom="5dp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
        <TextView  android:gravity="center" android:textSize="@dimen/bigger" android:layout_width="90dp" android:layout_height="fill_parent" android:text="@string/title"/>
        <EditText android:id="@+id/cart_add_title" android:inputType="text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:background="@drawable/edittextbackground" android:hint="购物  吃饭"/>
    </LinearLayout>
    <View android:layout_width="fill_parent" android:layout_height="1dp" android:background="@drawable/driver"/>
    <LinearLayout android:layout_marginTop="10dp" android:layout_marginBottom="5dp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
        <TextView  android:gravity="center" android:textSize="@dimen/bigger" android:layout_width="90dp" android:layout_height="fill_parent" android:text="@string/money"/>
        <EditText android:id="@+id/cart_add_money" android:inputType="number" android:layout_width="fill_parent" android:layout_height="wrap_content" android:background="@drawable/edittextbackground" android:hint="单位:元"/>
    </LinearLayout>
    <View android:layout_width="fill_parent" android:layout_height="1dp" android:background="@drawable/driver"/>
    <LinearLayout android:layout_marginTop="10dp" android:layout_marginBottom="5dp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
        <TextView  android:gravity="center" android:textSize="@dimen/bigger" android:layout_width="90dp" android:layout_height="fill_parent" android:text="@string/date"/>
        <TextView android:id="@+id/cart_add_date" android:layout_width="wrap_content" android:layout_height="30dp" android:background="@drawable/text_light" android:gravity="center" android:textSize="@dimen/small_nomal" android:textStyle="bold" android:text="2013-07-31 11:12"/>
        <ImageView android:id="@+id/cart_add_date_bt" android:clickable="true" android:layout_marginLeft="10dp" android:layout_width="40dp" android:layout_height="40dp" android:src="@drawable/date_bg"/>
    </LinearLayout>
    <View android:layout_width="fill_parent" android:layout_height="1dp" android:background="@drawable/driver"/>
    <LinearLayout android:layout_width="fill_parent" android:paddingTop="5dp" android:paddingBottom="5dp" android:layout_height="wrap_content" android:orientation="horizontal">
        <CheckBox android:id="@+id/cart_add_special" android:layout_marginLeft="10dp" android:textSize="@dimen/bigger"  android:layout_marginRight="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/special" android:layout_weight="1"/>
        <View android:layout_width="0.5dp" android:layout_height="fill_parent" android:background="@color/driver"/>
        <CheckBox android:id="@+id/cart_add_account" android:layout_marginLeft="10dp" android:textSize="@dimen/bigger" android:layout_marginRight="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/account" android:layout_weight="1"/>
    </LinearLayout>
    <View android:layout_width="fill_parent" android:layout_height="1dp" android:background="@drawable/driver"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1"/>
    <View android:layout_width="fill_parent" android:layout_height="1dp" android:background="@drawable/driver"/>
    <LinearLayout android:gravity="bottom" android:paddingTop="5dp" android:paddingBottom="5dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
        <ImageView android:id="@+id/cart_add_forgive" android:clickable="true" android:layout_width="wrap_content" android:layout_height="30dp" android:src="@drawable/forgive_bg" android:layout_weight="1"  />
        <View android:layout_width="0.5dp" android:layout_height="fill_parent" android:background="@color/driver"/>
        <ImageView android:id="@+id/cart_add_save" android:clickable="true" android:layout_width="wrap_content" android:layout_height="30dp" android:src="@drawable/save_bg" android:layout_weight="1"  />
    </LinearLayout>
</LinearLayout>
